--- a/internacional.html
+++ b/internacional.html
@@ -31,30 +31,31 @@
 </head>
 <body>
 <!-- Topbar Start -->
-<div class="container-fluid bg-primary py-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-right text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-3" href="https://www.facebook.com/EyEseguros" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-3"
-                       href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true"
-                       target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-white px-3" href="http://instagram.com/eyeseguros" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-3" href="https://www.youtube.com/@EyESeguros" target="_blank">
-                        <i class="fab fa-youtube"></i>
-                    </a>
+    <div class="container-fluid bg-primary py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-right text-lg-right">
+                    <div class="d-inline-flex align-items-center">
+                        <a class="text-white px-3"  href="https://wa.me/573153060894"   target="_blank">
+                            <i class="bi bi-whatsapp"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.facebook.com/EyEseguros"  target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a class="text-white px-3" href="http://instagram.com/eyeseguros" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="text-white pl-3" href="https://www.youtube.com/@EyESeguros"  target="_blank">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <!-- Topbar End -->
 
 
