--- a/vida.html
+++ b/vida.html
@@ -9,10 +9,10 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/EyElOGO.png" rel="icon">
+    <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
 
     <!-- Google Web Fonts -->
-     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,34 +26,37 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
 <body>
 <!-- Topbar Start -->
-<div class="container-fluid bg-primary py-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-right text-lg-right">
-                <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-3" href="https://www.facebook.com/EyEseguros" target="_blank">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a class="text-white px-3"
-                       href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true"
-                       target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a class="text-white px-3" href="http://instagram.com/eyeseguros" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a class="text-white pl-3" href="https://www.youtube.com/@EyESeguros" target="_blank">
-                        <i class="fab fa-youtube"></i>
-                    </a>
+    <div class="container-fluid bg-primary py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-right text-lg-right">
+                    <div class="d-inline-flex align-items-center">
+                        <a class="text-white px-3"  href="https://wa.me/573153060894"   target="_blank">
+                            <i class="bi bi-whatsapp"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.facebook.com/EyEseguros"  target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="text-white px-3" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a class="text-white px-3" href="http://instagram.com/eyeseguros" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="text-white pl-3" href="https://www.youtube.com/@EyESeguros"  target="_blank">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <!-- Topbar End -->
 
 
