--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,10 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/EyElOGO.png" rel="icon">
+    <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
 
     <!-- Google Web Fonts -->
-     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +26,8 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -35,6 +37,9 @@
             <div class="row">
                 <div class="col-md-12 text-right text-lg-right">
                     <div class="d-inline-flex align-items-center">
+                        <a class="text-white px-3"  href="https://wa.me/573153060894"   target="_blank">
+                            <i class="bi bi-whatsapp"></i>
+                        </a>
                         <a class="text-white px-3" href="https://www.facebook.com/EyEseguros"  target="_blank">
                             <i class="fab fa-facebook-f"></i>
                         </a>
@@ -229,6 +234,7 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
