Se corrige errores de página

--- a/vehiculo.html
+++ b/vehiculo.html
@@ -116,8 +116,8 @@
 <!-- Services Start -->
 <div class="container-fluid pt-5 pb-3">
     <div class="container">
-        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
-        <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
+        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Nuestros servicios</h6>
+        <h1 class="display-4 text-center mb-3">¿QUÉ OFRECEMOS?</h1>
         <br><br>
         <div class="row">
                 <div class="col-lg-7 col-md-12 pb-1 mb-5 text-center align-items-center justify-content-center">
@@ -131,8 +131,8 @@
                 <p>Un seguro de vehículo es un servicio que brinda protección financiera en caso de daños, pérdidas o responsabilidad por accidentes relacionados
                     con un automóvil, ayudando a cubrir los costos de reparación, reemplazo o compensación por lesiones o daños a terceros.</p>
                 <p> Euyenid y Edder te brinda protección financiera, tranquilidad y servicios personalizados para estar respaldado en caso de accidentes, daños o responsabilidad legal relacionada con tu automóvil.</p>
-                <div class="align-content-center align-items-center text-center justify-content-center">
-                    <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                <div class="align-content-center align-items-center text-center justify-content-center pb-3">
+                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
             </div>
         </div>
@@ -185,11 +185,11 @@
 <!---Modal End -->
 
 <!--Planes Start-->
-<div class="container-fluid pt5 pb-3">
+<div class="container-fluid pt-5 pb-3">
     <div class="container">
-        <h2 class="text-center mb-5 ">BENEFICIOS</h2> <br><br>
+        <h2 class="text-center mb-4 ">BENEFICIOS</h2> <br><br>
         <div class="row">
-            <div class="col-lg-4 col-md-12 pb-1 mb-5">
+            <div class="col-lg-4 col-md-12 pb-1 mb-5 ">
                 <h3 class="text-secondary text-center "> Responsabilidad civil </h3> <br>
                 <div class="text-center bg-light">
                 <i class="bi fa-10x bi-car-front text-primary"></i>
@@ -251,8 +251,8 @@
   <!-- Testimonial Start -->
     <!-- <div class="container-fluid py-5">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Testimonio</h6>
-            <h1 class="display-4 text-center mb-5">Nuestros clientes dicen</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Testimonio</h6>
+            <h1 class="display-4 text-center mb-3">Nuestros clientes dicen</h1>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <img class="position-relative rounded-circle bg-white shadow mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1;" alt="">
