--- a/vivienda.html
+++ b/vivienda.html
@@ -116,8 +116,8 @@
 <!-- Services Start -->
 <div class="container-fluid pt-5 pb-3">
     <div class="container">
-        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
-        <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
+        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Nuestros servicios</h6>
+        <h1 class="display-4 text-center mb-3">¿QUÉ OFRECEMOS?</h1>
         <br><br>
         <div class="row">
                 <div class="col-lg-7 col-md-12 pb-1 mb-5 text-center align-items-center justify-content-center">
@@ -131,10 +131,10 @@
                 <p>El Seguro de vivienda brinda una protección integral tanto para tu hogar como para tus pertenencias, sin importar si
                     eres propietario o inquilino. Nuestras coberturas se adaptan a tus necesidades específicas.</p>
                 <div class="align-content-center align-items-center text-center justify-content-center">
-                    <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
             </div>
-            <div class="col-lg-12 text-center mb-5">
+            <div class="col-lg-12 text-center mb-3">
             <h2> ¿QUÉ TE BRINDAMOS?</h2>
             </div>
             <div class="col-lg-12 text-left mb-sm-5">
@@ -198,8 +198,8 @@
   <!-- Testimonial Start -->
     <!-- <div class="container-fluid py-5">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Testimonio</h6>
-            <h1 class="display-4 text-center mb-5">Nuestros clientes dicen</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Testimonio</h6>
+            <h1 class="display-4 text-center mb-3">Nuestros clientes dicen</h1>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <img class="position-relative rounded-circle bg-white shadow mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1;" alt="">
