--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
 
 
     <!-- Navbar Start -->
-    <div class=" container-fluid position-relative nav-bar p-0">
+    <div class=" container-fluid position-relative nav-bar p-0 m-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="links navbar-brand text-center">
@@ -114,53 +114,54 @@
 
 
     <!-- Blog Start -->
-    <div class="container py-5">
+    <div class="container-fluid py-0">
+        <div class="container">
         <div class="row text-center">
             <!-- Blog Grid Start -->
-            <div class="col-lg-4 col-md-12 mb-5">
-                <iframe  src="https://www.youtube.com/embed/SFmUMPVG8JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div  class="col-lg-4 col-md-12 mb-5">
+                <iframe  style="width: 200px; height: 100px"  src="https://www.youtube.com/embed/SFmUMPVG8JE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>SEGURO DE VIDA </b></h4>
                 <p class="text-secondary"> <b>Conoce los beneficios y coberturas</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/HvQ2scLXL1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px"  src="https://www.youtube.com/embed/HvQ2scLXL1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>SEGURO PARA MASCOTA </b></h4>
                 <p class="text-secondary"> <b>Asegura a tu amigo de cuatro patas</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/AYlLD1PzOvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px"src="https://www.youtube.com/embed/AYlLD1PzOvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>PÓLIZA DE SAUD</b></h4>
                 <p class="text-secondary"> <b>Seguridad para tu salud</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/wJG3L5KcAbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px" src="https://www.youtube.com/embed/wJG3L5KcAbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>MEDICINA PREPAGADA</b></h4>
                 <p class="text-secondary"> <b>Beneficios de tener medicina prepagada</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe  src="https://www.youtube.com/embed/YuFs0evsqmI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px"  src="https://www.youtube.com/embed/YuFs0evsqmI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>PLAN COMPLEMENTARIO</b></h4>
                 <p class="text-secondary"> <b>Diferencia entre Medicina Prepagada y Póliza</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/9XAGWyjhlYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px" src="https://www.youtube.com/embed/9XAGWyjhlYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>SEGURO DE VEHÍCULO</b></h4>
                 <p class="text-secondary"> <b>Movilizate asegurado</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/ZtZvoRlBZQ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px" src="https://www.youtube.com/embed/ZtZvoRlBZQ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>SEGURO DEUDORES</b></h4>
                 <p class="text-secondary"> <b>Paga una cuota más baja ante los bancos</b> </p>
                 <hr class="col-lg-4">
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
-                <iframe src="https://www.youtube.com/embed/jkZilIHGPq0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="width: 200px; height: 100px" src="https://www.youtube.com/embed/jkZilIHGPq0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h4  class="text-primary"> <b>SEGURO PYME</b></h4>
                 <p class="text-secondary"> <b>Asegura tu empresa ante cualquier evento</b> </p>
                 <hr class="col-lg-4">
@@ -168,6 +169,7 @@
             <!-- Blog Grid End -->
 
 
+        </div>
         </div>
     </div>
     <!-- Blog End -->
