--- a/estudio.html
+++ b/estudio.html
@@ -116,8 +116,8 @@
 <!-- Services Start -->
 <div class="container-fluid pt-5 pb-3">
     <div class="container">
-        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
-        <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
+        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Nuestros servicios</h6>
+        <h1 class="display-4 text-center mb-3">¿QUÉ OFRECEMOS?</h1>
         <br><br>
         <div class="row">
                 <div class="col-lg-7 col-md-12 pb-1 mb-5 text-center align-items-center justify-content-center">
@@ -131,13 +131,13 @@
                 <p>Ahorrar para la educación de tu hijo es una forma de asegurar su futuro. Con nuestro seguro educativo, ahora podrás crear un ahorro
                     para ese gran momento de la universidad ¿Sabes cuánto te puedes ahorrar si empiezas con el seguro de educativo de tu hijo a temprana edad? </p>
                 <div class="align-content-center align-items-center text-center justify-content-center">
-                    <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
             </div>
-            <div class="col-lg-12 text-center mb-5">
+            <div class="col-lg-12 text-center mb-3">
             <h2> ASISTENCIAS</h2>
             </div>
-            <div class="container-fluid pt5 pb-3">
+            <div class="container-fluid pt-3 pb-3">
                 <div class="container">
                     <div class="col-lg-12 text-center">
                         <ul class="list-group">
@@ -202,8 +202,8 @@
   <!-- Testimonial Start -->
     <!-- <div class="container-fluid py-5">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Testimonio</h6>
-            <h1 class="display-4 text-center mb-5">Nuestros clientes dicen</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Testimonio</h6>
+            <h1 class="display-4 text-center mb-3">Nuestros clientes dicen</h1>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <img class="position-relative rounded-circle bg-white shadow mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1;" alt="">
