--- a/salud.html
+++ b/salud.html
@@ -116,8 +116,8 @@
 <!-- Services Start -->
 <div class="container-fluid pt-5 pb-3">
     <div class="container">
-        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
-        <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
+        <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Nuestros servicios</h6>
+        <h1 class="display-4 text-center mb-3">¿QUÉ OFRECEMOS?</h1>
         <br><br>
         <div class="row">
                 <div class="col-lg-7 col-md-12 pb-1 mb-5 text-center align-items-center justify-content-center">
@@ -131,8 +131,8 @@
                 <p>Un seguro de salud es un servicio que brinda protección financiera para cubrir los gastos médicos y de atención médica de una persona en caso de enfermedad o lesión.</p>
                 <p>Elegir un seguro de salud con Euyenid y Edder, a través de nuestras pólizas, siempre te busca la forma de protección que te ayuda a cubrir los costos de atención médica, incluyendo consultas médicas, medicamentos,
                     hospitalización y tratamientos, permitiendo a las personas acceder a los servicios de salud necesarios sin incurrir en gastos excesivos.</p>
-                <div class="align-content-center align-items-center text-center justify-content-center">
-                    <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                <div class="align-content-center align-items-center text-center justify-content-center pb-4">
+                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
 <!---Modal End -->
 
 <!--Planes Start-->
-<div class="container-fluid pt5 pb-3">
+<div class="container-fluid pt-5 pb-3">
     <div class="container">
         <h2 class="text-center mb-5 "> PLANES A LOS QUE PUEDES ACCEDER</h2> <br><br>
         <div class="row">
@@ -215,8 +215,8 @@
   <!-- Testimonial Start -->
     <!-- <div class="container-fluid py-5">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Testimonio</h6>
-            <h1 class="display-4 text-center mb-5">Nuestros clientes dicen</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-4">Testimonio</h6>
+            <h1 class="display-4 text-center mb-3">Nuestros clientes dicen</h1>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item">
                     <img class="position-relative rounded-circle bg-white shadow mx-auto" src="img/testimonial-1.jpg" style="width: 100px; height: 100px; padding: 12px; margin-bottom: -50px; z-index: 1;" alt="">
