--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
                             <p>Hogar y hogar deudores</p>
                             <p>PYMES</p>
                         </div>
-                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4 text-light" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4" >
@@ -225,7 +225,7 @@
                             <p>Seguro hogar</p>
                             <p>Seguro arrendamiento</p>
                         </div>
-                        <button  type="button"  class="btn btn-primary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                        <button  type="button"  class="btn btn-primary py-2 px-4 text-light" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
@@ -237,7 +237,7 @@
                             <p>Seguro de pensión</p>
                             <p>Seguro de educación</p>
                         </div>
-                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4 text-light" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                     </div>
                 </div>
             </div>
