--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-5">
+                <div class="col-lg-5 pt-5">
                     <img id= "sobreNosotros"class="img-fluid" src="" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
