--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <div class=" container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="links navbar-brand text-center">
+                <a href="index.html" class="links navbar-brand text-center">
                     <h1>Euyenid & Edder</h1> <h3 class="">Asesores de seguros</h3>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
