Se hace unas ajustes

--- a/about.html
+++ b/about.html
@@ -123,10 +123,10 @@
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Te brindamos una asesoría integral</h6>
                     <h1 class="mb-4"> Euyenid & Edder <br>Asesores de seguros</h1>
-                    <p class="mb-2"> Somos una agencia de seguros con más de <b>40 años de experiencia </b> en el sector.
+                    <p class="mb-2"> Somos una agencia de seguros con más de <b>40 años de experiencia </b> en el sector asegurador.
                         Nos especializamos en brindar soluciones de protección y seguridad a nuestros clientes. Nuestra agencia fue fundada con el objetivo de ofrecer
                         un servicio confiable y personalizado a cada uno de nuestros asegurados. Durante estos más de 40 años, hemos trabajado arduamente
-                        para construir una sólida reputación basada en la excelencia y la satisfacción del cliente.
+                        para construir una sólida reputación basada en la excelencia, honestidad, transparencia y satisfacción del cliente.
                         <br><br>
                         En <b> Euyenid & Edder, Asesores de seguros,</b> entendemos que cada persona y cada empresa tiene necesidades de protección únicas. Por eso, nos esforzamos en conocer
                         a fondo las necesidades y prioridades de nuestros clientes para ofrecerles  las mejores soluciones de seguros que se ajusten a sus requerimientos
@@ -257,7 +257,7 @@
                         <div class="mb-3">
                             <label class="col-form-label text-secondary"><b>¿Qué seguro te gustaría cotizar?</b></label>
                             <span class="text-danger">*</span>
-                            <select  id="selectSeguro" type="text" class="form-control border-dark text-primary" required >
+                            <select  id="selectSeguro" name="selectSeguro" type="text" class="form-control border-dark text-primary" required >
                                 <option class="text-danger" ></option>
                             </select>
                         </div>
@@ -268,14 +268,14 @@
                             <input class="form-control border-dark text-primary" id="name" required >
                         </div>
                         <div class="mb-3">
-                            <label for="movil" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
+                            <label for="celular" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
                             <span class="text-danger">*</span>
-                            <input type="number" class="form-control border-dark text-primary" id="movil" required >
+                            <input type="number" name="celular"class="form-control border-dark text-primary" id="celular" required >
                         </div>
                         <div class="mb-3">
                             <label for="email" class="col-form-label  text-secondary"> <b>Correo Electrónico</b></label>
                             <span class="text-danger">*</span>
-                            <input type="email" class="form-control border-dark text-primary" id="email" required >
+                            <input type="email" name="email" class="form-control border-dark text-primary" id="email" required >
                         </div>
                     </form>
                 </div>
