--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                 <div class="col-12">
                     <div class="contact-form">
                         <div id="success"></div>
-                        <form>
+                        <form  id="contact-form" action="/" method="post">
                             <div class="container-fluid">
                                 <div class="row">
                             <div class="col-lg-6 mb-3">
@@ -183,6 +183,9 @@
                                     <div class="col-12 form-floating">
                                         <label class="col-form-label  text-secondary"  for="mensaje"> <b>Comentarios</b> </label>
                                         <textarea id="mensaje"name="mensaje" class="form-control  border-dark text-primary" placeholder="" ></textarea>
+                                    </div>
+                                    <div class="col-12 text-center mt-5">
+                                        <button type="button" class="btn btn-primary text-center p-2"><b>Envíar</b></button>
                                     </div>
                                 </div>
                             </div>
