--- a/index.html
+++ b/index.html
@@ -462,24 +462,25 @@
                         <div class="mb-3">
                             <label class="col-form-label text-secondary"><b>¿Qué seguro te gustaría cotizar?</b></label>
                             <span class="text-danger">*</span>
-                            <select  id="selectSeguro" type="text" class="form-control border-dark text-primary" required >
-                            <option class="text-danger" ></option>
+                            <select  id="selectSeguro" name="selectSeguro" type="text" class="form-control border-dark text-primary" required >
+                                <option class="text-danger" ></option>
                             </select>
                         </div>
+
                         <div class="mb-3">
                             <label for="name" class="col-form-label  text-secondary"><b>Nombre y Apellido</b></label>
                             <span class="text-danger">*</span>
                             <input class="form-control border-dark text-primary" id="name" required >
                         </div>
                         <div class="mb-3">
-                            <label for="movil" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
+                            <label for="celular" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
                             <span class="text-danger">*</span>
-                            <input type="number" class="form-control border-dark text-primary" id="movil" required >
+                            <input type="number" name="celular"class="form-control border-dark text-primary" id="celular" required >
                         </div>
                         <div class="mb-3">
                             <label for="email" class="col-form-label  text-secondary"> <b>Correo Electrónico</b></label>
                             <span class="text-danger">*</span>
-                            <input type="email" class="form-control border-dark text-primary" id="email" required >
+                            <input type="email" name="email" class="form-control border-dark text-primary" id="email" required >
                         </div>
                     </form>
                 </div>
