--- a/pension.html
+++ b/pension.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>E & E Asesores de Seguros</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Seguros, Pólizas de seguros, Protección financiera, Cobertura de seguros, Seguro de vida, Seguro de salud, Seguro de automóviles, Seguro de hogar, Seguro de viaje, Seguro de negocios, Responsabilidad civil, Protección de activos, Indemnización, Riesgo, Prima de seguro, Agente de seguros, Comparación de seguros, Reclamaciones de seguros, Renovación de pólizas, Seguridad financiera" name="keywords">
+    <meta content="Encuentra las mejores opciones de seguros para proteger tu vida, salud, automóvil, hogar y más. Ofrecemos pólizas de seguros con amplia cobertura y precios competitivos. Nuestros agentes de seguros expertos están listos para ayudarte a encontrar la mejor protección para tus necesidades. Solicita cotizaciones gratuitas y obtén la seguridad financiera que mereces." name="description">
 
     <!-- Favicon -->
     <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
