--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Encuentra las mejores opciones de seguros para proteger tu vida, salud, automóvil, hogar y más. Ofrecemos pólizas de seguros con amplia cobertura y precios competitivos. Nuestros agentes de seguros expertos están listos para ayudarte a encontrar la mejor protección para tus necesidades. Solicita cotizaciones gratuitas y obtén la seguridad financiera que mereces." name="description">
 
     <!-- Favicon -->
-    <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
+    <link href="img/LOGO%20png.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,6 +20,7 @@
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@500&display=swap" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -63,11 +64,16 @@
     <!-- Navbar Start -->
     <div class=" container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="index.html" class="links navbar-brand text-center">
-                    <h1>Euyenid & Edder</h1> <h3 class="">Asesores de seguros</h3>
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <nav class="navbar navbar-expand-lg bg-white navbar-light ">
+                <div>
+                    <a href="index.html" class="links navbar-brand text-center">
+                    <img  class="img-fluid p-lg-4" src="img/LOGO%20A%20COLOR%20SIN%20FONDO.png">
+                    </a>
+                </div>
+                <div class="text-center">
+                     <h1  class="eye">Euyenid & Edder</h1> <h3  class="eye">Asesores de seguros</h3>
+                </div>
+                <button type="button" class="navbar-toggler m-2" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
@@ -155,7 +161,7 @@
         <div class="container" style="padding: 0 30px;">
             <div class="row">
                 <div class="col-lg-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
-                    <div class="d-inline-flex">
+                    <div class="d-inline-flex text_contact" >
                         <i class="fa fa-2x fa-map-marker-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Nuestra ubicación</h5>
@@ -164,7 +170,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 d-flex align-items-center justify-content-center bg-primary mb-4 mb-lg-0" style="height: 100px;">
-                    <div class="d-inline-flex text-left">
+                    <div class="d-inline-flex text_contact">
                         <i class="fa fa-2x fa-envelope text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Nuestro Email</h5>
@@ -174,12 +180,11 @@
                     </div>
                 </div>
                 <div class="col-lg-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
-                    <div class="d-inline-flex text-left">
-                        <i class="fa fa-2x fa-phone-alt text-white m-0 mr-3"></i>
+                    <div class="d-inline-flex text_contact ">
+                        <i class="fa fa-2x fa-phone-alt text-white m-0 mr-lg-3 mr-1"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Llámanos</h5>
-                            <p class="m-0 text-white">(315) 3060894</p>
-                            <p class="m-0 text-white">(315) 3316809</p>
+                            <p class="m-0 text-white">(315) 3060894 - (315) 3316809</p>
                         </div>
                     </div>
                 </div>
@@ -599,8 +604,8 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
-            <div class="col-lg-4 col-md-12 mb-5">
-               <h1 class="bg-white">Euyenid & Edder</h1> <h3 class="bg-white">Asesores de seguros</h3>
+            <div class="col-lg-4 col-md-12 mb-5 ">
+               <h1  class="eye_footer">Euyenid & Edder</h1> <h3 class="bg-white eye">Asesores de seguros</h3>
                 <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en asesoramiento.
                   en seguros de salud, vida, vehículo y general.</p>
                 <div class="d-flex justify-content-start mt-4">
